--- a/Biblioteca/Biblioteca.cbp
+++ b/Biblioteca/Biblioteca.cbp
@@ -35,6 +35,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="Ingresos.h" />
+		<Unit filename="Recursividad.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Recursividad.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
