--- a/Estructuras/Estructuras.cbp
+++ b/Estructuras/Estructuras.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Entradas.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="Entradas.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
